--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -96,6 +96,7 @@ jobs:
         path: dist/*.tar.gz
 
   upload_pypi:
+    if: github.event_name == 'push'
     name: Upload to PyPI
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
